--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                Here's a bit of text for the first div, named Div 1. It is a lovely div, just like the other two, named Div 2 and Div 3. They go great together and are bff's.
             </div>
             <div class="div-2">
-                Div 2
+                Here's a bit of text for the second div, named Div 2. It is a lovely div, just like the other two, named Div 1 and Div 3. They go great together and are bff's.
             </div>
             <div class="div-3">
-                Div 3
+                Here's a bit of text for the third div, named Div 3. It is a lovely div, just like the other two, named Div 1 and Div 2. They go great together and are bff's.
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
